--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -24,6 +24,16 @@
       .topo {
         padding-top:25px !important;
       }
+
+     .infogolodeouro {
+        padding-top:35px;
+        font-family: 'Montserrat', sans-serif;
+       font-weight:bold !important;
+        font-size: 24px;
+        color:#C69A31;
+        text-align: center;
+       }
+
       .title {
         font-family: 'Montserrat', sans-serif;
         padding-left:30px;
