--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -1,327 +1,316 @@
 .golodeouro {
-    .golodeouro-header-padding {
-        padding-left: 15px;
-        padding-right: 15px;
-        font-family: 'Montserrat', sans-serif;
+  .golodeouro-header-padding {
+    padding-left: 15px;
+    padding-right: 15px;
+    font-family: 'Montserrat', sans-serif;
+  }
+  .golodeouro-header {
+    background-color: #1e293e;
+
+    padding-bottom: 20px;
+  }
+  .golodeouro-header .header-left {
+    float: left;
+    width: 65%;
+  }
+  .orange {
+    color: #C69A31;
+  }
+
+  .white {
+    color: #ffffff;
+  }
+
+  .topo {
+    padding-top: 25px !important;
+  }
+  .title {
+    font-family: 'Montserrat', sans-serif;
+    padding-left: 30px;
+    padding-bottom: 0px;
+    line-height: 100%;
+    margin: 0 !important;
+  }
+  .title-header {
+    padding-top: 0px;
+    font-weight: 780 !important;
+    text-shadow: -1px 0 #C69A31, 0 1px #C69A31, 1px 0 #C69A31, 0 -1px #C69A31;
+
+  }
+  .title-bold {
+    font-weight: bold !important;
+
+  }
+
+  .title-subtitle {
+    font-weight: 500 !important;
+  }
+
+  .title-subtitle-2 {
+    font-weight: bold !important;
+  }
+
+  @media (max-width: 767px) {
+
+    .stats {
+      display: none !important;
     }
-     .golodeouro-header{
-        background-color:#1e293e;
-
-        padding-bottom: 20px;
+    .small-xs-9 {
+      width: 75%;
+      float: left;
     }
-    .golodeouro-header .header-left {
-        float: left;
-        width: 65%;
+    .small-xs-12 {
+      width: 100%;
+      position: relative;
+      min-height: 1px;
+      padding-left: 15px;
+      padding-right: 15px;
+      float: left;
     }
-      .orange {
-        color:#C69A31;
-      }
+    .small-xs {
 
-      .white {
-        color:#ffffff;
-      }
-
-      .topo {
-        padding-top:25px !important;
-      }
-      .title {
-        font-family: 'Montserrat', sans-serif;
-        padding-left:30px;
-        padding-bottom: 0px;
-        line-height: 100%;
-        margin:0 !important;
-      }
-      .title-header {
-        padding-top: 0px;
-        font-weight:780 !important;
-        text-shadow: -1px 0 #C69A31, 0 1px #C69A31, 1px 0 #C69A31, 0 -1px #C69A31;
-        
-      }
-      .title-bold {
-        font-weight:bold !important;
-
-      }
-
-
-      .title-subtitle {
-        font-weight:500 !important;
-      }
-
-      .title-subtitle-2 {
-        font-weight:bold !important;
-      }
-      
-      
-
-      @media (max-width: 767px) {
-
-        .stats{
-          display:none !important;
-        }
-        .small-xs-9 {
-            width: 75%;
-            float: left;
-        }
-        .small-xs-12 {
-          width: 100%;
-          position: relative;
-          min-height: 1px;
-          padding-left: 15px;
-          padding-right: 15px;
-          float:left;
-        }
-        .small-xs {
-            font-size: 9px !important;
-        }
-        .medium-xs {
-            //font-size: 14px !important;
-        }
-        .big-xs-2 {
-            //font-size: 33px !important;
-            //font-style: italic;
-        }
-        .big-xs {
-            //font-size: 20px !important;
-        }
-        .image-xs {
-            width: 100px !important;
-        }
     }
-    @media (min-width: 768px) {
-        .small-md {
-            font-size: 14px !important;
-        }
-        .medium-md {
-            //font-size: 50px !important;
-            text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
-        }
-        //.big-md {
-        //    font-size: 30px !important;
-        //}
-        .image-md {
-            width: 168px !important;
-        }
+    .medium-xs {
+
     }
-    .golodeouro-header .header-left .title1 {
+    .big-xs-2 {
+
+    }
+    .big-xs {
+    }
+    .image-xs {
+      width: 100px !important;
+    }
+  }
+  @media (min-width: 768px) {
+    .small-md {
+
+    }
+    .medium-md {
+      text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    }
+    .big-md {
+
+    }
+    .image-md {
+      width: 168px !important;
+    }
+  }
+
+  .golodeouro-header {
+    .header-left {
+      .title1 {
         padding-left: 50px;
         padding-top: 30px;
         color: #C69A31;
         line-height: 100%;
         margin: 0 !important;
-        font-size: 30px !important;
+        font-size: 30px;
         font-weight: 780 !important;
-    }
-    .golodeouro-header .header-left .title2 {
-        padding-left: 50px;
-        color: white;
-        line-height: 100%;
-        font-size: 100px !important;
-        font-weight: 500 !important;
-    }
-    .golodeouro-header .header-left .title3 {
+      }
+      .title2 {
         padding-left: 50px;
         padding-top: 5px;
         color: white;
         line-height: 100%;
-        font-size: 45px !important;
+        font-size: 45px;
         font-weight: bold !important;
-    }
-    .golodeouro-header .header-left .title4 {
+      }
+      .title3 {
         padding-left: 50px;
         padding-top: 5px;
         color: white;
         line-height: 100%;
-        font-size: 15px !important;
-        font-weight: bold !important;
-    }
-    .golodeouro-header .header-right {
-        float: left;
-        width: 35%;
-    }
-    .golodeouro-header .header-right .image {
-        padding-top: 25px;
-    }
-    .golodeouro-container {
-        margin-top: 10px;
-        background-color: #1e293e;
-        font-family: 'Open Sans', sans-serif;
-        padding-bottom: 15px;
-    }
-    .select-golodeouro {
-        padding-bottom: 15px;
-    }
-    .golodeouro-container .golodeouro-fixture-title {
-        padding-top: 20px;
-        font-weight: bold;
-        color: white;
-        font-size: 22px;
-        text-align: center;
-    }
-    .golodeouro-container .golodeouro-fixture-time {
-        padding-top: 10px;
-        font-weight: bold;
-        color: white;
         font-size: 15px;
-        text-align: center;
+        font-weight: bold !important;
+      }
     }
-    .golodeouro-container .golodeouro-fixture-markets {
-        padding-top: 20px;
-        font-weight: bold;
-        color: white;
-        text-align: center;
-        clear: both;
+    .header-right {
+      float: left;
+      width: 35%;
+      .image {
+        padding-top: 25px;
+      }
     }
-     .golodeouro-container .golodeouro-fixture-markets select{
-       color:white;
-        text-align-last:center;
-        font-weight:normal;
-        font-size:13px;
-        padding-left:5px;
-        padding-right:5px;
-        border-radius:0 !important;
-        height:40px;
-        -webkit-appearance:none;
-        -moz-appearance: none;
-        background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
-    }
-    .golodeouro-container .golodeouro-fixture-markets select option {
-        font-family: 'Open Sans', sans-serif;
-        width: 30%!important;
-        text-align-last: center!important;
-        height: 40px!important;
-        font-weight: normal;
-        background-color: white;
-        color: black;
-        border: none;
-    }
-}
+  }
 
-.golodeouro-container .golodeouro-bet {
-    padding-left: 10px;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    clear: both;
-    z-index: -1;
-}
+  .select-golodeouro {
+    padding-bottom: 15px;
+  }
 
-.golodeouro-container .golodeouro-bet select {
-    width: 100%;
-    text-align-last: center;
-    font-weight: normal;
-    font-size: 13px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 0 !important;
-    height: 40px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
-}
-
-.golodeouro-container .golodeouro-bet select option {
+  .golodeouro-container {
+    margin-top: 10px;
+    background-color: #1e293e;
     font-family: 'Open Sans', sans-serif;
-    width: 30%!important;
-    text-align-last: center!important;
-    height: 40px!important;
-    font-weight: normal;
-    background-color: white;
-    color: black;
-    border: none;
+    padding-bottom: 15px;
+    .golodeouro-fixture-title {
+      padding-top: 20px;
+      font-weight: bold;
+      color: white;
+      font-size: 22px;
+      text-align: center;
+    }
+    .golodeouro-fixture-time {
+      padding-top: 10px;
+      font-weight: bold;
+      color: white;
+      font-size: 15px;
+      text-align: center;
+    }
+    .golodeouro-fixture-markets {
+      padding-top: 20px;
+      font-weight: bold;
+      color: white;
+      text-align: center;
+      clear: both;
+    }
+    .golodeouro-fixture-markets select {
+      color: white;
+      text-align-last: center;
+      font-weight: normal;
+      font-size: 13px;
+      padding-left: 5px;
+      padding-right: 5px;
+      border-radius: 0 !important;
+      height: 40px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
+    }
+    .golodeouro-fixture-markets select option {
+      font-family: 'Open Sans', sans-serif;
+      width: 30% !important;
+      text-align-last: center !important;
+      height: 40px !important;
+      font-weight: normal;
+      background-color: white;
+      color: black;
+      border: none;
+    }
+    .golodeouro-bet {
+      padding-left: 10px;
+      font-weight: bold;
+      color: white;
+      text-align: center;
+      clear: both;
+      z-index: -1;
+    }
+    .golodeouro-bet select {
+      width: 100%;
+      text-align-last: center;
+      font-weight: normal;
+      font-size: 13px;
+      padding-left: 5px;
+      padding-right: 5px;
+      border-radius: 0 !important;
+      height: 40px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
+    }
+    .golodeouro-bet select option {
+      font-family: 'Open Sans', sans-serif;
+      width: 30% !important;
+      text-align-last: center !important;
+      height: 40px !important;
+      font-weight: normal;
+      background-color: white;
+      color: black;
+      border: none;
+    }
+    .golodeouro-bet .flavor {
+      margin-bottom: 20px;
+      height: 42px;
+      vertical-align: middle;
+      display: inline-block;
+      font-weight: bold;
+      color: white;
+      font-size: 14px !important;
+
+    }
+    .golodeouro-bet .value {
+      color: #C69A31;
+      display: inline-block;
+    }
+    .golodeouro-bet .bet button {
+      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-weight: bold;
+      font-size: 18px;
+      color: #FFF;
+      width: 100%;
+
+      height: 40px;
+      border: 0;
+      background-color: #71aa30;
+    }
+    .golodeouro-bet .bet button {
+      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-weight: bold;
+      font-size: 18px;
+      color: #FFF;
+      width: 100%;
+      height: 40px;
+      border: 0;
+      background-color: #71aa30;
+    }
+  }
 }
 
-.golodeouro-container .golodeouro-bet .flavor {
-  margin-bottom:20px;
-  height:42px;
-  vertical-align:middle;
-  display: inline-block;
-  font-weight:bold;
-  color:white;
-  font-size:14px !important;
+.golodeouro-history {
+  font-size: 15px;
+  padding-left: 10px;
+  padding-top: 15px;
+  margin-top: 12px;
+  background-color: #1e293e;
+  font-family: 'Open Sans', sans-serif;
+  height: 210px;
 
-}
-
-.golodeouro-container .golodeouro-bet .value {
-    color: #C69A31;
-    display: inline-block;
-}
-
-.golodeouro-container .golodeouro-bet .bet {
-}
-.golodeouro-container .golodeouro-bet .bet button {
-  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  color: #FFF;
-  width: 100%;
-
-  height: 40px;
-  border: 0;
-  background-color: #71aa30;
-}
-.golodeouro-container .golodeouro-bet .bet button {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-    font-weight: bold;
-    font-size: 18px;
-    color: #FFF;
-    width: 100%;
-    height: 40px;
-    border: 0;
-    background-color: #71aa30;
-}
-
- .golodeouro-history{
-   font-size:15px;
-  padding-left:10px;
-   padding-top:15px;
-  margin-top:12px;
-  background-color:#1e293e;
-   font-family: 'Open Sans', sans-serif;
-  height:210px;
-
-}
-.golodeouro-history .whitebar{
-  padding-top:5px;
-  width:95%;
-  border-bottom: 1px solid rgba(255,255,255,225);
-}
-
-.golodeouro-history .whitebar {
+  .whitebar {
     padding-top: 5px;
     width: 95%;
     border-bottom: 1px solid rgba(255, 255, 255, 225);
-}
+  }
 
-.golodeouro-history  .last-golodeouro-left {
-  margin-top: 15px;
-  float: left;
-  font-family: 'Open Sans', sans-serif;
-}
-.golodeouro-history .last-golodeouro-left {
+  .last-golodeouro-left {
+    margin-top: 15px;
     float: left;
-  font-family: 'Open Sans', sans-serif;
-}
-.golodeouro-history  .last-golodeouro-right {
-  margin-top: 15px;
-  padding-right: 20px;
-  font-weight: bold;
-  float: right;
-  font-family: 'Open Sans', sans-serif;
-}
-.golodeouro-history .last-golodeouro-right {
+    font-family: 'Open Sans', sans-serif;
+  }
+  .last-golodeouro-right {
+    margin-top: 15px;
     padding-right: 20px;
     font-weight: bold;
     float: right;
-  font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+  }
 }
 
 @media (max-width: $mobile-screen-width) {
-    .golodeouro {
-        .golodeouro-header {
-            border-radius: 0;
+  .golodeouro {
+    .golodeouro-header {
+      border-radius: 0;
+    }
+    .flavor-xs {
+      padding-top: 20px;
+    }
+
+    .golodeouro-header {
+      .header-left {
+        .title1 {
+          padding-left: 25px;
+          font-size: 17px;
         }
-      .flavor-xs{
-        padding-top:20px;
+        .title2 {
+          padding-top: 2px;
+          padding-left: 25px;
+          font-size: 25px;
+        }
+        .title3 {
+          padding-top: 2px;
+          padding-left: 25px;
+          font-size: 8px;
+        }
       }
     }
+  }
 }
