#491 fix numbers mobile

--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -171,6 +171,12 @@
       text-align: center;
       clear: both;
     }
+    .golodeouro-fixture-markets .titulo{
+      font-family: 'Montserrat', sans-serif;
+      font-size:35px;
+      font-weight:bold;
+      width:20%;
+    }
     .golodeouro-fixture-markets select {
       color: white;
       text-align-last: center;
