--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -124,11 +124,12 @@
         font-weight: bold !important;
       }
       .title3 {
+        margin-top: 3px;
         padding-left: 50px;
         padding-top: 5px;
         color: white;
         line-height: 100%;
-        font-size: 15px;
+        font-size: 13px;
         font-weight: bold !important;
       }
     }
