--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -245,6 +245,12 @@
     .golodeouro-bet .value {
       color: #C69A31;
       display: inline-block;
+      font-size:13px;
+    }
+    .golodeouro-bet .value-text {
+      color: white;
+      font-size:13px;
+      display: inline-block;
     }
     .golodeouro-bet .bet button {
       font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
