--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -6,12 +6,15 @@
   }
   .golodeouro-header {
     background-color: #1e293e;
-
     padding-bottom: 20px;
+
+    .header-wrapper {
+      text-align: center;
+      font-size: 0;
+    }
   }
   .golodeouro-header .header-left {
-    float: left;
-    width: 65%;
+    display: inline-block;
   }
   .orange {
     color: #C69A31;
@@ -21,9 +24,9 @@
     color: #ffffff;
   }
 
-      .topo {
-        padding-top:25px !important;
-      }
+    .topo {
+      padding-top:25px !important;
+    }
     .infogolodeouro {
         padding-top:35px;
         font-family: 'Montserrat', sans-serif;
@@ -40,9 +43,6 @@
       }
       .title-header {
         padding-top: 0px;
-        font-weight:780 !important;
-        text-shadow: -1px 0 #C69A31, 0 1px #C69A31, 1px 0 #C69A31, 0 -1px #C69A31;
-        
       }
       .title-bold {
         font-weight:bold !important;
@@ -100,45 +100,49 @@
 
     }
     .image-md {
-      width: 168px !important;
+      width: 210px !important;
     }
   }
 
   .golodeouro-header {
     .header-left {
+      text-align: right;
+      padding-right: 10px;
+      vertical-align: top;
+      max-width: calc(100% - 210px);
+
       .title1 {
-        padding-left: 50px;
         padding-top: 30px;
         color: #C69A31;
         line-height: 100%;
-        margin: 0 !important;
         font-size: 30px;
-        font-weight: 780 !important;
+        font-weight: bold;
+        margin: 0 !important;
       }
       .title2 {
-        padding-left: 50px;
-        padding-top: 5px;
+        padding-top: 8px;
         color: white;
         line-height: 100%;
-        font-size: 45px;
+        font-size: 44px;
         font-weight: bold !important;
       }
       .title3 {
-        margin-top: 3px;
-        padding-left: 50px;
+        margin-top: 14px;
         padding-top: 5px;
         color: white;
         line-height: 100%;
-        font-size: 13px;
+        font-size: 15px;
         font-weight: bold !important;
       }
     }
     .header-right {
-      float: left;
-      width: 35%;
+      display: inline-block;
       .image {
         padding-top: 25px;
       }
+    }
+    .title3-mobile {
+      display: none;
     }
   }
 
@@ -193,7 +197,6 @@
     }
     .golodeouro-fixture-markets select option {
       font-family: 'Open Sans', sans-serif;
-      width: 30% !important;
       text-align-last: center !important;
       height: 40px !important;
       font-weight: normal;
@@ -202,7 +205,6 @@
       border: none;
     }
     .golodeouro-bet {
-      padding-left: 10px;
       font-weight: bold;
       color: white;
       text-align: center;
@@ -224,7 +226,6 @@
     }
     .golodeouro-bet select option {
       font-family: 'Open Sans', sans-serif;
-      width: 30% !important;
       text-align-last: center !important;
       height: 40px !important;
       font-weight: normal;
@@ -232,32 +233,40 @@
       color: black;
       border: none;
     }
+
     .golodeouro-bet .flavor {
+      width: 100%;
       margin-bottom: 20px;
       height: 42px;
       vertical-align: middle;
       display: inline-block;
-      font-weight: bold;
       color: white;
-      font-size: 14px !important;
-
+      font-weight: bold;
+      font-size: 13px !important;
     }
     .golodeouro-bet .value {
       color: #C69A31;
       display: inline-block;
+      font-weight: bold;
       font-size:13px;
     }
     .golodeouro-bet .value-text {
       color: white;
       font-size:13px;
+      font-weight: bold;
       display: inline-block;
     }
+
+    .golodeouro-bet .bet button {
+      padding: 5px;
+    }
+
     .golodeouro-bet .bet button {
       font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
       font-weight: bold;
       font-size: 18px;
       color: #FFF;
-      width: 103%;
+      width: 100%;
 
       height: 40px;
       border: 0;
@@ -267,31 +276,38 @@
 }
 
 .golodeouro-history {
+  overflow: auto;
   font-size: 15px;
-  padding-left: 10px;
-  padding-top: 15px;
+  padding: 15px 0 15px 10px;
   margin-top: 12px;
   background-color: #1e293e;
   font-family: 'Open Sans', sans-serif;
-  height: 210px;
 
   .whitebar {
-    padding-top: 5px;
+    padding-top: 10px;
     width: 95%;
     border-bottom: 1px solid rgba(255, 255, 255, 225);
   }
 
-  .last-golodeouro-left {
-    margin-top: 15px;
-    float: left;
-    font-family: 'Open Sans', sans-serif;
+  .last-golodeouro-header {
+      height: 15px;
   }
-  .last-golodeouro-right {
-    margin-top: 15px;
-    padding-right: 20px;
-    font-weight: bold;
-    float: right;
-    font-family: 'Open Sans', sans-serif;
+
+
+  .last-golodeouro-row {
+    overflow: auto;
+
+    .last-golodeouro-left {
+      float: left;
+      font-family: 'Open Sans', sans-serif;
+    }
+
+    .last-golodeouro-right {
+      padding-right: 20px;
+      font-weight: bold;
+      float: right;
+      font-family: 'Open Sans', sans-serif;
+    }
   }
 }
 
@@ -306,6 +322,9 @@
 
     .golodeouro-header {
       .header-left {
+        vertical-align: top;
+        max-width: calc(100% - 105px);
+
         .title1 {
           padding-left: 0px;
           font-size: 18px;
@@ -313,13 +332,18 @@
         .title2 {
           padding-top: 2px;
           padding-left: 0px;
-          font-size: 27px;
+          font-size: 26px;
         }
         .title3 {
-          padding-top: 2px;
-          padding-left: 0px;
-          font-size: 9px;
+          display: none;
         }
+      }
+      .title3-mobile {
+        display: block;
+        padding: 10px 15px 0;
+        font-size: 13px;
+        text-align: center;
+        font-weight: bold;
       }
     }
   }
