--- a/resources/assets/sass/profile/_bank.scss
+++ b/resources/assets/sass/profile/_bank.scss
@@ -79,7 +79,8 @@
   }
 }
 .withdraw-email,
-.withdraw-amount {
+.withdraw-amount,
+.reserve-amount {
   padding-top: 10px;
   margin-left: -5px;
   margin-right: -5px;
