#519 Adding Details for Transfers.

--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -134,87 +134,7 @@
     }
   }
 }
-.history {
-  padding-top: 20px;
-  .grupo {
-    padding: 0 10px;
-    .grupo-title {
-      font-weight: normal;
-      color: $color-text-box;
-    }
-    &.active .grupo-title {
-      font-weight: bold;
-      color: $color-blue;
-    }
-  }
-  &.dates {
-    padding-top: 40px;
-    .form-group {
-      margin-bottom: 10px;
-    }
-
-    .input-group {
-      padding: 0 10px;
-    }
-    input{
-      padding: 5px;
-      font-size: 12px;
-      height: 25px;
-      line-height: 25px;
-      text-indent: 5px;
-    }
-  }
-  .place {
-    .bag {
-      clear: both;
-      border-top: 1px solid #cccccc;
-      .details {
-        font-size: 13px;
-        margin: 10px 10px;
-        color: #ffffff;
-        line-height: 20px;
-        padding: 10px;
-        background: $color-dark-blue;
-        background-image: url('/assets/portal/img/Logo-CP.svg');
-        background-repeat: no-repeat;
-        background-position: 98% 10px;
-        background-size: 80px auto;
-
-        .result,
-        .total {
-          text-align: right;
-          font-weight: bold;
-        }
-        .line {
-          font-weight: bold;
-          &.market {
-            font-weight: normal;
-          }
-        }
-        .game {
-          font-size: 12px;
-          color: $color-blue-hover;
-        }
-        .pushed i,
-        .returned i {
-          color: orange;
-        }
-        .won i {
-          color: green;
-        }
-        .loss i {
-          color: red;
-        }
-      }
-    }
-    > .row[data-type=sportsbook]:hover, >.row[data-type=casino_session]:hover {
-      > div:not(.bag) {
-        cursor: pointer;
-      }
-      background: $color-blue-nav;
-    }
-  }
-}
+@import "history";
 .messages {
   padding: 10px 0;
   form .input-group {
