#519 Adding Details for Transfers.

--- a/resources/assets/sass/profile/_history.scss
+++ b/resources/assets/sass/profile/_history.scss
@@ -86,7 +86,7 @@
       padding: 5px;
       font-size: 1em;
       line-height: 34px;
-      &.date {
+      &.single-line {
         line-height: normal;
       }
     }
