#527 Fix Handicap on Asian.

--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -452,7 +452,7 @@
         }
         &.align-left {
           text-align: left;
-        },
+        }
         &.lineSplitter {
           line-height: 5px;
           margin-bottom: 7px;
